@@ -2,6 +2,8 @@ version 2.4.11
 --------------
 Thanks to Dan on dar-support mailing-list for feedback. Thanks to
 Aymeric Petit for feedback. Thanks to Alexey Dubinin for bug report.
+last, Thanks to Thomas Jarosch for his patches generated using cppcheck
+tool.
 
 version 2.4.10
 --------------
