@@ -525,7 +525,7 @@ namespace libdar
 	{
 	    if(tmp != NULL)
 	    {
-		delete tmp;
+		delete [] tmp;
 		tmp = NULL;
 	    }
 	    throw;
